--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <picture class="profile">
             <source media="(min-width: 1200px)" srcset="images/Jeremy.jpg">
             <source media="(min-width: 501px)" srcset="images/Fremont.jpg">
-            <img src="images/PC.gif" alt="That's me!" />
+            <img src="images/Cancun.jpg" alt="That's me!" />
         </picture>  
        <h2 class="subheader">About Me</h2>
        
