--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <a href="https://semhargezai.github.io/Stranger-Things/" target="_blank">Stranger Things</a>
             <a href="https://github.com/Jeremyxaynakham" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/jeremy-xaynakham" target="_blank">LinkedIn</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+            <a href="https://jeremyxaynakham.github.io/daily-grind/" target="_blank">Daily Grind</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a> 
         </nav>
      </header>
 
