--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="https://github.com/Jeremyxaynakham" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/jeremy-xaynakham" target="_blank">LinkedIn</a>
             <a href="https://jeremyxaynakham.github.io/daily-grind/" target="_blank">Daily Grind</a>
+            <a href="https://jeremyxaynakham.github.io/data-processing/" target="_blank">Data Processing</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a> 
         </nav>
      </header>
