--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="https://www.linkedin.com/in/jeremy-xaynakham" target="_blank">LinkedIn</a>
             <a href="https://jeremyxaynakham.github.io/daily-grind/" target="_blank">Daily Grind</a>
             <a href="https://jeremyxaynakham.github.io/data-processing/" target="_blank">Data Processing</a>
+            <a href="https://jeremyxaynakham.github.io/dom-play/" target="_blank">DOM Play</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a> 
         </nav>
      </header>
