Added Seasonal Styles

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="https://jeremyxaynakham.github.io/daily-grind/" target="_blank">Daily Grind</a>
             <a href="https://jeremyxaynakham.github.io/data-processing/" target="_blank">Data Processing</a>
             <a href="https://jeremyxaynakham.github.io/dom-play/" target="_blank">DOM Play</a>
+            <a href="https://jeremyxaynakham.github.io/seasonal-styles/" target="_blank">Seasonal Styles</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a> 
         </nav>
      </header>
@@ -38,7 +39,7 @@
         </p>
         <p>
            I am currently enrolled in the Year Up program taking classes at Seattle Central College.
-           Year up’s mission is to close the opportunity divide by ensuring that young adults like myself gain the skills and experience 
+           Year up's mission is to close the opportunity divide by ensuring that young adults like myself gain the skills and experience 
            needed to reach their career goals or a higher education. I am in the application development track working towards earning my certification. 
            In my free time I enjoy hiking, building computers and self-development. 
         </p>
