--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="https://jeremyxaynakham.github.io/data-processing/" target="_blank">Data Processing</a>
             <a href="https://jeremyxaynakham.github.io/dom-play/" target="_blank">DOM Play</a>
             <a href="https://jeremyxaynakham.github.io/seasonal-styles/" target="_blank">Seasonal Styles</a>
+            <a href="https://ajax-pet-adoption.jeremyxaynakham.repl.co" target="_blank">AJAX Pet Adoption</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a> 
         </nav>
      </header>
