--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="https://jeremyxaynakham.github.io/dom-play/" target="_blank">DOM Play</a>
             <a href="https://jeremyxaynakham.github.io/seasonal-styles/" target="_blank">Seasonal Styles</a>
             <a href="https://ajax-pet-adoption.jeremyxaynakham.repl.co" target="_blank">AJAX Pet Adoption</a>
-            <a href="https://web-service.jeremyxaynakham.repl.co/" target="_blank">At Her Majesty's Web Service</a>
+            <a href="https://web-service.jeremyxaynakham.repl.co/" target="_blank">Web Service</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a> 
         </nav>
      </header>
