--- a/index.html
+++ b/index.html
@@ -40,20 +40,16 @@
            Hello, my name is Jeremy Xaynakham and welcome to my site. By the time you leave here you'll get to learn a little about me.
         </p>
         <p>
-           I am currently enrolled in the Year Up program taking classes at Seattle Central College.
-           Year up's mission is to close the opportunity divide by ensuring that young adults like myself gain the skills and experience 
-           needed to reach their career goals or a higher education. I am in the application development track working towards earning my certification. 
-           In my free time I enjoy hiking, building computers and self-development. 
+           Hello, my name is Jeremy. I recently completed the Year Up program at Seattle Central College and earned my Application Development certification. 
+           During my time, I've gained knowledge in the programming languages HTML, Java, JavaScript, CSS, and Python. I also have a background in data analysis, 
+           web development, and project management.
         </p>
         <p>
-           I have six years of experience working in customer service. In my previous positions, I have been recognized for my passion for helping others 
-           and always having a positive attitude. I am determined to get the job done while also delivering quality work.
+            I am excited to contribute my talents and proficiency in critical thinking toward team efforts. As an engaging communicator, my focus on building strong 
+            professional relationships has been a beneficial asset throughout my career. I am determined to get the job done while also delivering quality work. 
         </p>
         <p> 
-           My classes combined with my passion for helping others, and always continuing to learn 
-           has molded me into an emerging professional. My goal after completing Year Up is to become 
-           a Data Analyst Specialist and to take the necessary courses or any other certifications needed 
-           to attain a job in tech. 
+            I am always open to connect. Feel free to message me on LinkedIn or send me an email at jeremyxaynakham@gmail.com
         </p>
         <p>
             Thank you for visiting my site and I look forward to connecting with you on LinkedIn or you can email me at jeremyxaynakham@gmail.com 
