--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
            Hello, my name is Jeremy Xaynakham and welcome to my site. By the time you leave here you'll get to learn a little about me.
         </p>
         <p>
-           Hello, my name is Jeremy. I recently completed the Year Up program at Seattle Central College and earned my Application Development certification. 
-           During my time, I've gained knowledge in the programming languages HTML, Java, JavaScript, CSS, and Python. I also have a background in data analysis, 
+           I recently completed the Year Up program at Seattle Central College and earned my Application Development certification. 
+           During my time, I've gained knowledge in the programming languages HTML, CSS, SQL, Java, JavaScript, and Python. I also have a background in data analysis, 
            web development, and project management.
         </p>
         <p>
